--- a/OneDrive/Desktop/Airtable_Int/frontend/src/.env
+++ b/OneDrive/Desktop/Airtable_Int/frontend/src/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:4000
+VITE_API_URL=https://airtable-integration.onrender.com
 VITE_BACKEND_LINK=https://airtable-integration.onrender.com
